--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "budget-app",
   "private": true,
   "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
+    "@hotwired/stimulus": "^3.2.1",
+    "@rails/actioncable": "^7.0.6",
+    "@rails/activestorage": "^7.0.6",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.3",
-    "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "babel-loader": "^9.1.2",
+    "esbuild": "^0.18.11",
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0",
-    "webpack-dev-server": "^3"
+    "stylelint-scss": "^3.21.0"
+  },
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
   }
 }
